--- a/views/evaluation/getEvaluation.ejs
+++ b/views/evaluation/getEvaluation.ejs
@@ -35,6 +35,19 @@
         <br>
         
 
+        <form method="POST">
+            <div class="wrap">
+                <div class="search">
+                    <input type="text" name="_id" class="searchTerm" placeholder="<%= items.myObject.busqueda %>">
+                    <a id="submit-form-link" href="#"></a>
+                    <button type="submit" class="spanColor searchButton">
+                        <i class="fa fa-search"></i>
+                    </button>
+                </div>
+            </div>
+        </form>
+        <br><br>
+
 
         <% if ((items.myObject.tablaEvaluacion.valores.length) > 0) { %>
             <table id="alimentos" class="table table-bordered table-hover table-sm">
