Inserción de platos desde un archivo JSON

--- a/views/dish/insertDishJson.ejs
+++ b/views/dish/insertDishJson.ejs
@@ -39,7 +39,7 @@
         <div class="card">
             <br>
             <p><b><%= items.myObject.jsonDish.ejemplo %></b></p>
-            <textarea name="textarea" rows="12" cols="50"><%= items.json %></textarea>
+            <textarea name="textarea" rows="12" cols="50" disabled><%= items.json %></textarea>
 
             <form method="POST" enctype="multipart/form-data">
                 <div class="form-group">
