--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -42,12 +42,37 @@ body {
   font-weight: bold;
 }
 
+.textarea{
+  width: 90%;
+}
+
+
+
+.cardJson{
+
+  box-shadow: 15px 15px 5px 0px rgba(170, 167, 167, 0.6);
+  border: 6px dashed #0d6977;
+  /* border-style: ; */
+  background-image:  radial-gradient(ellipse at center, rgb(255, 255, 255) 0%, rgb(253, 250, 250) 100%);
+  padding: 40px;
+  
+  margin-bottom: 20px;
+}
+
+
+.ejemplo{
+  padding-left: 20px;
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
+
 .nutrientesTitle{
     font-size: 1.5em;
     text-align: center;
     font-weight: bold;
-
 }
+
 label {
   font-weight: 550;
 }
@@ -308,4 +333,14 @@ body {
       rgba(7, 110, 128, 1) 100%
     );
     color: #ffffff;
+  }
+
+  .jsonBody{
+   
+    background: linear-gradient(
+      to bottom,
+      rgba(230, 250, 250, 0.5) 0%,
+      rgba(159, 198, 201, 0.4) 50%,
+      rgba(56, 164, 184, 0.4) 100%
+    );
   }
