--- a/views/dish/updateDish.ejs
+++ b/views/dish/updateDish.ejs
@@ -230,7 +230,7 @@
                                 newI.setAttribute("type", inputs[i].type);
                                 newI.setAttribute("placeholder", inputs[i].placeholder);
                                 newI.setAttribute("name", inputs[i].name);
-
+                                newI.required = true;
                                 if (inputs[i].name === "ingredients[]") {
                                     newI.classList.add("searchIngredient");
                                 }
@@ -250,7 +250,7 @@
                                 console.log("FALLA: " + selects[k])
                                 const newS = document.createElement("SELECT");
                                 newS.setAttribute("name", selects[k].name);
-
+                                newS.required = true;
                                 const optS = document.createElement("OPTION");
                                 optS.value = selects[k].options[0].value;
                                 optS.innerHTML = selects[k].options[0].value;
